--- a/docker/dev/web/apache/www.mars-rover-mission.com.conf
+++ b/docker/dev/web/apache/www.mars-rover-mission.com.conf
@@ -7,7 +7,7 @@
     DocumentRoot /var/www/html/www.mars-rover-mission.com/laravel/public/
     ServerName www.mars-rover-mission.com
 
-    <Directory "/var/www/html/www.mars-rover-mission.com/laravel/public">
+    <Directory "/var/www/html/www.mars-rover-mission.com/laravel/public/">
         AllowOverride all
         Options FollowSymlinks
     </Directory>
