--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -1,19 +1,19 @@
-APP_NAME=Laravel
+APP_NAME=Mars Rover Mission
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:BenmgIdmWOjx4N1TA9kqhl8eoY+Ax7/qeCSoOyTOSxU=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://www.mars-rover-mission.com
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mars-mysql
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=mars
+DB_USERNAME=mars
+DB_PASSWORD=DvFEwzKLqrrGF9Yz
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
