--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -23,7 +23,9 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/core/",
+            "App\\": "app/",
+            "Rover\\": "src/Rover/",
+            "Map\\": "src/Map/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
