--- a/laravel/public/mix-manifest.json
+++ b/laravel/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=9b72b0f000569cf9fa1d",
+    "/css/app.css": "/css/app.css?id=68b329da9893e34099c7"
 }
