removed whitespaces from .env.example

--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Mars Rover Mission
+APP_NAME=MarsRoverMission
 APP_ENV=local
 APP_KEY=base64:BenmgIdmWOjx4N1TA9kqhl8eoY+Ax7/qeCSoOyTOSxU=
 APP_DEBUG=true
